[tool.poetry]
name = "repl_nix_myappcoordinator-1"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
APScheduler = "^3.9.1"
Flask = "^2.2.2"
gspread = "^5.4.0"
oauth2client = "^4.1.3"
anvil = "^0.0.2"
anvil-uplink = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
